[project]
name = "icloud"
version = "0.0.1"
requires-python = "==3.10.13"
dependencies = [
  "numpy",
  "pyicloud==2.2.0",
  "hydra-core>=1.3.2",
  "parameterized>=0.9.0",
  "pre-commit>=4.2.0",
  "pytest>=8.3.5",
  "setuptools",
  "icloud-api",
  "ipython"
]

[tool.uv.sources]
icloud-api = { path = "src", editable = true }
